--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" color-mode="light">
   <head>
+    <script src="http://localhost:8097"></script>
     <meta charset="utf-8" />
     <!-- favicon generator stuff -->
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
