Move static OpenGraph tags to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:site_name" content="Abstract Play: Make Time for Games" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://play.abstractplay.com/public/logo-full-light.png" />
+
     <title>Abstract Play</title>
   </head>
   <body>
