OpenGraph image URL fix

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     -->
     <meta property="og:site_name" content="Abstract Play: Make Time for Games" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://play.abstractplay.com/public/logo-full-light.png" />
+    <meta property="og:image" content="https://play.abstractplay.com/logo-full-light.png" />
 
     <title>Abstract Play</title>
   </head>
