Hopeful fix to alternate displays resetting after submitted move.

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
          to server-side rendering. So put static placeholders here for now. -->
     <meta property="og:title" content="Abstract Play Homepage" />
     <meta property="og:url" content="https://play.abstractplay.com" />
-    <meta property="og:description" content="Abstract Play is a site that allows you to play abstract strategy board games against other players on the internet. These games are not real-time, meaning your opponent does not need to be online at the same time as you are. You can submit your move and come back later to see if your opponent has moved. We specialize in offbeat, perfect information games without any element of luck." />
+    <meta property="og:description" content="Play abstract strategy board games online asynchronously!" />
 
     <title>Abstract Play</title>
   </head>
