Change header on error page

--- a/public/error.html
+++ b/public/error.html
@@ -24,12 +24,12 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Abstract Play - Error</title>
+    <title>Abstract Play - Please Wait</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <main id="root" class="container p-0">
-        <h1 class="title">Error</h1>
+        <h1 class="title">Please Wait</h1>
         <div class="content">
             If you're seeing this page, then a new version of the code is being deployed. Please wait a minute and try again. If the problem persists, <a href="https://discord.abstractplay.com">join us on Discord and let us know</a>.
         </div>
