Hopeful fix to analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" color-mode="light">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TKD64QKZ99"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-TKD64QKZ99');
+    </script>
     <script src="http://localhost:8097"></script>
     <meta charset="utf-8" />
     <!-- favicon generator stuff -->
