Tweak service worker

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
         gtag('config', 'G-TKD64QKZ99');
     </script>
-    <script src="http://localhost:8097"></script>
+    <!-- <script src="http://localhost:8097"></script> -->
     <meta charset="utf-8" />
     <!-- favicon generator stuff -->
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
