--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <main id="root" class="container p-0"></main>
+    <div id="modal-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
